don't put xtend files in binary artifacts
Change-Id: Iae9bd8cc01c5d94a769b521eb8ba758cfe46cda8

--- a/jbase/build.properties
+++ b/jbase/build.properties
@@ -6,6 +6,7 @@ bin.includes = model/,\
                META-INF/,\
                .,\
                plugin.xml
+bin.excludes = **/*.xtend
 additional.bundles = org.eclipse.xtext.xbase,\
                      org.eclipse.xtext.generator,\
                      org.apache.commons.logging,\
