--- a/jbase.releng/pom.xml
+++ b/jbase.releng/pom.xml
@@ -19,6 +19,9 @@
 		<module>../jbase.example.purejbase</module>
 		<module>../jbase.example.purejbase.ui</module>
 		<module>../jbase.example.purejbase.tests</module>
+		<module>../jbase.example.jbasescript</module>
+		<module>../jbase.example.jbasescript.ui</module>
+		<module>../jbase.example.jbasescript.tests</module>
 		<module>../domainmodel/org.eclipse.xtext.example.domainmodel</module>
 		<module>../domainmodel/org.eclipse.xtext.example.domainmodel.ui</module>
 		<module>../domainmodel/org.eclipse.xtext.example.domainmodel.tests</module>
