Example import wizard
Change-Id: I40c8fa5b5d8f0b8605a79a6855ff2aeece2ccc29

--- a/jbase.ui/plugin.xml
+++ b/jbase.ui/plugin.xml
@@ -551,5 +551,12 @@
             type="text">
     </fileTypes>
   </extension>
+  <extension
+        point="org.eclipse.ui.newWizards">
+     <category
+           id="jbase.ui.category"
+           name="Jbase">
+     </category>
+  </extension>
 
 </plugin>
