--- a/jbase.releng/pom.xml
+++ b/jbase.releng/pom.xml
@@ -25,6 +25,7 @@
 		<module>../domainmodel/org.eclipse.xtext.example.domainmodel</module>
 		<module>../domainmodel/org.eclipse.xtext.example.domainmodel.ui</module>
 		<module>../domainmodel/org.eclipse.xtext.example.domainmodel.tests</module>
+		<module>../jbase.ui.examples</module>
 		<module>../jbase.doc</module>
 		<module>../jbase.sdk</module>
 		<module>../jbase.site</module>
