changed name of the .target file

--- a/jbase.releng/pom.xml
+++ b/jbase.releng/pom.xml
@@ -46,7 +46,7 @@
 		<platform-version>[3.9,4.0)</platform-version>
 		<fornax-oaw-m2-plugin-version>3.5.1</fornax-oaw-m2-plugin-version>
 
-		<target-file-name>mars</target-file-name>
+		<target-file-name>mars-xtext-2.8</target-file-name>
 
 		<!-- <jacoco.reportPath>../target/jacoco.exec</jacoco.reportPath> -->
 		<!-- <findbugs.reportPath>../target/findbugs</findbugs.reportPath> -->
@@ -134,17 +134,6 @@
 	</properties>
 
 	<profiles>
-		<profile>
-			<id>luna</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-
-			<properties>
-				<target-file-name>luna</target-file-name>
-			</properties>
-		</profile>
-
 		<profile>
 			<id>local</id>
 			<activation>
