--- a/jbase.tests/pom.xml
+++ b/jbase.tests/pom.xml
@@ -28,6 +28,11 @@
 			</plugin>
 
 			<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+			</plugin>
+
+			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-surefire-plugin</artifactId>
 				<version>${tycho-version}</version>
