tycho.testArgLine used only when jacoco is enabled

--- a/domainmodel/org.eclipse.xtext.example.domainmodel.tests/pom.xml
+++ b/domainmodel/org.eclipse.xtext.example.domainmodel.tests/pom.xml
@@ -34,7 +34,7 @@
 							<useUIHarness>true</useUIHarness>
 							<useUIThread>true</useUIThread>
 							<!-- tycho.testArgLine repeated to re-use the configuration for argLine for jacoco agent -->
-							<argLine>${tycho.testArgLine} ${memoryArgs} -DbuildingWithTycho=true</argLine>
+							<argLine>${memoryArgs} -DbuildingWithTycho=true</argLine>
 							<includes>
 								<include>**/tests/*Test*.java</include>
 							</includes>
