--- a/jbase.testlanguage.tests/pom.xml
+++ b/jbase.testlanguage.tests/pom.xml
@@ -42,7 +42,7 @@
 							<useUIThread>false</useUIThread>
 							<!-- tycho.testArgLine repeated to re-use the configuration for argLine 
 								for jacoco agent -->
-							<argLine>${tycho.testArgLine} ${memoryArgs}</argLine>
+							<argLine>${memoryArgs}</argLine>
 							<includes>
 								<include>**/jbase/testlanguage/tests/*Test.java</include>
 							</includes>
