--- a/jbase.releng/pom.xml
+++ b/jbase.releng/pom.xml
@@ -253,6 +253,17 @@
 				</plugin>
 				
 				<plugin>
+					<groupId>org.eluder.coveralls</groupId>
+					<artifactId>coveralls-maven-plugin</artifactId>
+					<version>4.1.0</version>
+					<configuration>
+						<jacocoReports>
+							<jacocoReport>${jacoco.xml.reportPath}</jacocoReport>
+						</jacocoReports>
+					</configuration>
+				</plugin>
+				
+				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>sonar-maven-plugin</artifactId>
 					<version>2.5</version>
