--- a/.travis.yml
+++ b/.travis.yml
@@ -29,4 +29,4 @@ before_script:
  
 script:
  - export
- - mvn -f jbase.releng/pom.xml clean verify -U -Dfindbugs.skip=true -Pjacoco-report
+ - mvn -f jbase.releng/pom.xml clean verify -U -Dfindbugs.skip=true -Pjacoco-report coveralls:report
