--- a/jbase.tests/pom.xml
+++ b/jbase.tests/pom.xml
@@ -13,12 +13,26 @@
 
 	<artifactId>jbase.tests</artifactId>
 	<packaging>eclipse-test-plugin</packaging>
-	
+
 	<properties>
 		<!-- Workaround for https://bugs.eclipse.org/bugs/show_bug.cgi?id=397015 -->
 		<sonar.sources></sonar.sources>
 		<sonar.tests>src,xtend-gen</sonar.tests>
 	</properties>
+
+	<profiles>
+		<profile>
+			<id>macosx-jvm-flags</id>
+			<activation>
+				<os>
+					<family>mac</family>
+				</os>
+			</activation>
+			<properties>
+				<os-jvm-flags>-XstartOnFirstThread</os-jvm-flags>
+			</properties>
+		</profile>
+	</profiles>
 
 	<build>
 		<plugins>
@@ -64,7 +78,7 @@
 							<useUIHarness>true</useUIHarness>
 							<useUIThread>true</useUIThread>
 							<!-- tycho.testArgLine repeated to re-use the configuration for argLine for jacoco agent -->
-							<argLine>${tycho.testArgLine} ${memoryArgs} -DbuildingWithTycho=true</argLine>
+							<argLine>${tycho.testArgLine} ${os-jvm-flags} ${memoryArgs} -DbuildingWithTycho=true</argLine>
 							<includes>
 								<include>**/jbase/ui/tests/*Test.java</include>
 							</includes>
