(travis) delegate to before_script.sh

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install: true
 before_install: echo "MAVEN_OPTS='-Xmx2048m -XX:MaxPermSize=512m'" > ~/.mavenrc
 
 before_script:
- - sh -e /etc/init.d/xvfb start
+ - sh -e ./before_script.sh
  
 script:
  - export
