--- a/domainmodel/org.eclipse.xtext.example.domainmodel.tests/pom.xml
+++ b/domainmodel/org.eclipse.xtext.example.domainmodel.tests/pom.xml
@@ -74,6 +74,11 @@
 								<id>org.eclipse.rcp</id>
 								<versionRange>0.0.0</versionRange>
 							</requirement>
+							<requirement>
+								<type>eclipse-feature</type>
+								<id>org.eclipse.jdt</id>
+								<versionRange>0.0.0</versionRange>
+							</requirement>
 						</extraRequirements>
 					</dependency-resolution>
 				</configuration>
