(travis) set JAVA_HOME explicitly for MacOSX
See https://github.com/travis-ci/travis-ci/issues/2839

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,10 @@ env: DISPLAY=:99.0
 
 install: true
 
-before_install: echo "MAVEN_OPTS='-Xmx2048m -XX:MaxPermSize=512m'" > ~/.mavenrc
+before_install:
+ - echo "MAVEN_OPTS='-Xmx2048m -XX:MaxPermSize=512m'" > ~/.mavenrc
+ - if [ "$TRAVIS_OS_NAME" == "osx" ]; then export JAVA_HOME=$(/usr/libexec/java_home); fi
+ - echo $JAVA_HOME
 
 before_script:
  - sh -e ./before_script.sh
