--- a/jbase.releng/pom.xml
+++ b/jbase.releng/pom.xml
@@ -110,30 +110,32 @@
 		<findbugs.skip>true</findbugs.skip>
 		<swtbot.tests.only>false</swtbot.tests.only>
 		<swtbot.tests.skip>false</swtbot.tests.skip>
-		
+
 		<!-- properties for deploying the composite update site and zipped products on Sourceforge -->
-		
+
 		<!-- since this is used in the pluginManagement section, we need to make sure
 			the path always points to this pom's directory; project.basedir will always point
 			to the directory of the pom where the pluginManagement's plugins are used -->
 		<ant-files-path>${project.basedir}/../jbase.releng/ant</ant-files-path>
 
-		<!-- the subdirectory for the composite update site -->
 		<updates.dir>jbase</updates.dir>
-		<site.label>Java-- Site</site.label>
+		<site.label>Jbase Site</site.label>
+		<remote.dir>lbettini,xtext-jbase@frs.sourceforge.net:/home/frs/project/xtext-jbase</remote.dir>
+		<remote.updates.dir>updates/releases</remote.updates.dir>
+		<remote.zips.dir>zips</remote.zips.dir>
 
-		<remote.dir>lbettini,jbase@frs.sourceforge.net:/home/frs/project/jbase</remote.dir>
-	
+		<!-- remote host zips dir -->
+		<rsync.remote.zips.dir>${remote.dir}/${remote.zips.dir}</rsync.remote.zips.dir> 
+		<!-- remote rsync host -->
+		<rsync.remote.dir>${remote.dir}/${remote.updates.dir}/</rsync.remote.dir> 
 		<!-- local source directory of p2 site for rsync -->
-		<rsync.remote.dir>${remote.dir}/updates/releases/</rsync.remote.dir>
-		<!-- remote directory of p2 site for rsync -->
 		<rsync.local.dir>${user.home}/p2.repositories/${updates.dir}/</rsync.local.dir>
 
 		<!-- pass "-n" to perform a trial run with no changes made -->
 		<dryrun></dryrun>
-		
+
 		<!-- set it to true to have a self contained p2 repository https://wiki.eclipse.org/Tycho/eclipse-repository#Creating_a_self-contained_p2_repository -->
-		<includeAllDependencies>true</includeAllDependencies>
+		<includeAllDependencies>false</includeAllDependencies>
 	</properties>
 
 	<profiles>
