--- a/jbase.releng/pom.xml
+++ b/jbase.releng/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>jbase</groupId>
+	<groupId>net.sf.xtext-jbase</groupId>
 	<artifactId>jbase.releng</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
@@ -353,7 +353,7 @@
 				<configuration>
 					<target>
 						<artifact>
-							<groupId>jbase</groupId>
+							<groupId>net.sf.xtext-jbase</groupId>
 							<artifactId>jbase.targetplatform</artifactId>
 							<version>${project.version}</version>
 							<classifier>${target-file-name}</classifier>
