--- a/jbase.testlanguage/pom.xml
+++ b/jbase.testlanguage/pom.xml
@@ -6,7 +6,7 @@
 
 	<parent>
 		<relativePath>../jbase.releng/pom.xml</relativePath>
-		<groupId>jbase</groupId>
+		<groupId>net.sf.xtext-jbase</groupId>
 		<artifactId>jbase.releng</artifactId>
 		<version>0.1.0-SNAPSHOT</version>
 	</parent>
