--- a/jbase.ui.examples/pom.xml
+++ b/jbase.ui.examples/pom.xml
@@ -5,7 +5,7 @@
 
   <parent>
 	<relativePath>../jbase.releng/pom.xml</relativePath>
-	<groupId>jbase</groupId>
+	<groupId>net.sf.xtext-jbase</groupId>
 	<artifactId>jbase.releng</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
   </parent>
