--- a/jbase.ui.examples/pom.xml
+++ b/jbase.ui.examples/pom.xml
@@ -4,9 +4,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-	<relativePath>../jbase.releng/pom.xml</relativePath>
+	<relativePath>../jbase.parent/pom.xml</relativePath>
 	<groupId>net.sf.xtext-jbase</groupId>
-	<artifactId>jbase.releng</artifactId>
+	<artifactId>jbase.parent</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
   </parent>
 
