--- a/jbase.parent/pom.xml
+++ b/jbase.parent/pom.xml
@@ -54,12 +54,12 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<os-jvm-flags />
 		<memoryArgs>-Xms256M -Xmx1024M -XX:PermSize=256M -XX:MaxPermSize=256M -XX:+HeapDumpOnOutOfMemoryError</memoryArgs>
-		<xtext.version>2.8.4</xtext.version>
+		<xtext.version>2.10.0-SNAPSHOT</xtext.version>
 		<xtext-version>${xtext.version}</xtext-version>
 		<platform-version>[3.9,4.0)</platform-version>
 		<fornax-oaw-m2-plugin-version>3.5.1</fornax-oaw-m2-plugin-version>
 
-		<target-file-name>mars-xtext-2.8</target-file-name>
+		<target-file-name>mars-xtext-nightly</target-file-name>
 
 		<!-- <jacoco.reportPath>../target/jacoco.exec</jacoco.reportPath> -->
 		<!-- <findbugs.reportPath>../target/findbugs</findbugs.reportPath> -->
