--- a/jbase.mwe2/pom.xml
+++ b/jbase.mwe2/pom.xml
@@ -13,4 +13,12 @@
 	<artifactId>jbase.mwe2</artifactId>
 	<packaging>eclipse-plugin</packaging>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.xtend</groupId>
+				<artifactId>xtend-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
