--- a/jbase.parent/pom.xml
+++ b/jbase.parent/pom.xml
@@ -56,6 +56,7 @@
 		<memoryArgs>-Xms256M -Xmx1024M -XX:PermSize=256M -XX:MaxPermSize=256M -XX:+HeapDumpOnOutOfMemoryError</memoryArgs>
 		<xtext.version>2.10.0</xtext.version>
 		<xtext-version>${xtext.version}</xtext-version>
+		<xtextVersion>${xtext.version}</xtextVersion>
 		<platform-version>[3.9,4.0)</platform-version>
 		<fornax-oaw-m2-plugin-version>3.5.1</fornax-oaw-m2-plugin-version>
 
