--- a/jbase.releng/pom.xml
+++ b/jbase.releng/pom.xml
@@ -18,6 +18,7 @@
 		<module>../jbase.targetplatform</module>
 		<module>../jbase.mwe2</module>
 		<module>../jbase</module>
+		<module>../jbase.ide</module>
 		<module>../jbase.ui</module>
 		<module>../jbase.testlanguage</module>
 		<module>../jbase.testlanguage.ide</module>
@@ -25,6 +26,7 @@
 		<module>../jbase.testlanguage.tests</module>
 		<module>../jbase.testlanguage.ui.tests</module>
 		<module>../jbase.tests</module>
+		<module>../jbase.ui.tests</module>
 		<module>../jbase.example.purejbase</module>
 		<module>../jbase.example.purejbase.ui</module>
 		<module>../jbase.example.purejbase.tests</module>
