removed -Xdoclint:none, valid only with Java 8

--- a/jbase.parent/pom.xml
+++ b/jbase.parent/pom.xml
@@ -200,9 +200,11 @@
 								<goals>
 									<goal>jar</goal>
 								</goals>
+								<!--  Use the following configuration with Java 8
 								<configuration>
 									<additionalparam>-Xdoclint:none</additionalparam>
 								</configuration>
+								 -->
 							</execution>
 						</executions>
 					</plugin>
