--- a/jbase.releng/pom.xml
+++ b/jbase.releng/pom.xml
@@ -17,6 +17,7 @@
 	<modules>
 		<module>../jbase.targetplatform</module>
 		<module>../jbase.mwe2</module>
+		<module>../jbase.lib</module>
 		<module>../jbase</module>
 		<module>../jbase.ide</module>
 		<module>../jbase.ui</module>
