48: jbase.lib.feature
Task-Url: https://github.com/LorenzoBettini/jbase/issues/48

--- a/jbase.releng/pom.xml
+++ b/jbase.releng/pom.xml
@@ -41,6 +41,7 @@
 		<module>../domainmodel/org.eclipse.xtext.example.domainmodel.tests</module>
 		<module>../jbase.ui.examples</module>
 		<module>../jbase.doc</module>
+		<module>../jbase.lib.feature</module>
 		<module>../jbase.sdk</module>
 		<module>../jbase.site</module>
 	</modules>
