--- a/jbase.parent/ant/release.properties
+++ b/jbase.parent/ant/release.properties
@@ -1,6 +1,8 @@
 #Build version
-#Thu, 07 Jul 2016 09:28:24 +0200
+#Fri, 08 Jul 2016 11:18:59 +0200
 
-version_main=0.3.1
-version_osgi=0.3.1.qualifier
-version_mvn=0.3.1-SNAPSHOT
+version_main=0.4.0
+version_osgi=0.4.0.qualifier
+version_mvn=0.4.0-SNAPSHOT
+
+majorMinorVersion=0.4
