--- a/jbase.example.client.maven/pom.xml
+++ b/jbase.example.client.maven/pom.xml
@@ -1,13 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.xtext.builddsl</groupId>
-	<artifactId>org.xtext.builddsl.client.maven</artifactId>
+	<groupId>net.sf.xtext-jbase</groupId>
+	<artifactId>jbase.example.client.maven</artifactId>
 	<version>0.4.0-SNAPSHOT</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<xtext-version>2.8.4</xtext-version>
+		<xtext-version>2.10.0</xtext-version>
 	</properties>
 
 	<dependencies>
@@ -37,8 +37,8 @@
 						</goals>
 						<configuration>
 							<sources>
-								<source>src/main/generated-sources/</source>
-								<source>src/test/generated-sources/</source>
+								<source>src/main/generated-sources/xtend/</source>
+								<source>src/test/generated-sources/xtend/</source>
 							</sources>
 						</configuration>
 					</execution>
@@ -99,7 +99,7 @@
 							<setup>jbase.example.jbasescript.JbasescriptStandaloneSetup</setup>
 							<outputConfigurations>
 								<outputConfiguration>
-									<outputDirectory>src/main/generated-sources/</outputDirectory>
+									<outputDirectory>src/main/generated-sources/xtend/</outputDirectory>
 								</outputConfiguration>
 							</outputConfigurations>
 						</language>
