--- a/jbase.parent/pom.xml
+++ b/jbase.parent/pom.xml
@@ -344,11 +344,11 @@
 					</configuration>
 				</plugin>
 				
-				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>sonar-maven-plugin</artifactId>
-					<version>2.5</version>
-				</plugin>
+<!-- 				<plugin> -->
+<!-- 					<groupId>org.codehaus.mojo</groupId> -->
+<!-- 					<artifactId>sonar-maven-plugin</artifactId> -->
+<!-- 					<version>2.5</version> -->
+<!-- 				</plugin> -->
 
 			</plugins>
 		</pluginManagement>
