--- a/jbase.parent/pom.xml
+++ b/jbase.parent/pom.xml
@@ -77,7 +77,7 @@
 		<!-- see http://sonarqube.15.x6.nabble.com/sonar-issue-ignore-multicriteria-td5021722.html and
 		 http://stackoverflow.com/questions/21825469/configure-sonar-sonar-issue-ignore-multicriteria-through-maven
 		 for the multicriteria property -->
-		<sonar.issue.ignore.multicriteria>e11,e12,e13,e14,e2,e3,e4,e5</sonar.issue.ignore.multicriteria>
+		<sonar.issue.ignore.multicriteria>e11,e12,e13,e14,e2,e3,e4,e5,e6</sonar.issue.ignore.multicriteria>
 		
 		<!-- standard convention for method names: in the outline tree provider we
 		 must use methods that start with _ and they'd violate the rule squid:S00100 -->
@@ -109,7 +109,11 @@
 		<!-- Useless parenthesis; these files use code automatically generated -->
 		<sonar.issue.ignore.multicriteria.e5.ruleKey>squid:UselessParenthesesCheck</sonar.issue.ignore.multicriteria.e5.ruleKey>
 		<sonar.issue.ignore.multicriteria.e5.resourceKey>**/*AbstractXbaseProposalProvider.java</sonar.issue.ignore.multicriteria.e5.resourceKey>
-		
+
+		<!-- since we extend Xbase it's normal to have a deep inheritance -->
+		<sonar.issue.ignore.multicriteria.e6.ruleKey>squid:MaximumInheritanceDepth</sonar.issue.ignore.multicriteria.e6.ruleKey>
+		<sonar.issue.ignore.multicriteria.e6.resourceKey>**/*.java</sonar.issue.ignore.multicriteria.e6.resourceKey>
+
 		<!--  sonar.skippedModules is deprecated: https://jira.codehaus.org/browse/SONAR-5109 -->
 		<!-- instead we must use advanced reactor options: https://jira.codehaus.org/browse/MSONAR-61  -->
 		<!-- Example:
