--- a/jbase.parent/pom.xml
+++ b/jbase.parent/pom.xml
@@ -77,7 +77,7 @@
 		<!-- see http://sonarqube.15.x6.nabble.com/sonar-issue-ignore-multicriteria-td5021722.html and
 		 http://stackoverflow.com/questions/21825469/configure-sonar-sonar-issue-ignore-multicriteria-through-maven
 		 for the multicriteria property -->
-		<sonar.issue.ignore.multicriteria>e11,e12,e13,e14,e2,e3,e4,e5,e6</sonar.issue.ignore.multicriteria>
+		<sonar.issue.ignore.multicriteria>e11,e12,e13,e14,e15,e2,e3,e4,e5,e6</sonar.issue.ignore.multicriteria>
 		
 		<!-- standard convention for method names: in the outline tree provider we
 		 must use methods that start with _ and they'd violate the rule squid:S00100 -->
@@ -92,7 +92,10 @@
 
 		<sonar.issue.ignore.multicriteria.e14.ruleKey>squid:S00100</sonar.issue.ignore.multicriteria.e14.ruleKey>
 		<sonar.issue.ignore.multicriteria.e14.resourceKey>**/*ValueConverterService.java</sonar.issue.ignore.multicriteria.e14.resourceKey>
-		
+
+		<sonar.issue.ignore.multicriteria.e15.ruleKey>squid:S00100</sonar.issue.ignore.multicriteria.e15.ruleKey>
+		<sonar.issue.ignore.multicriteria.e15.resourceKey>**/*TypeComputer.java</sonar.issue.ignore.multicriteria.e15.resourceKey>
+
 		<!-- "Tabulation characters should not be used"
 		 sorry... I don't agree :) -->
 		<sonar.issue.ignore.multicriteria.e2.ruleKey>squid:S00105</sonar.issue.ignore.multicriteria.e2.ruleKey>
