--- a/jbase.parent/pom.xml
+++ b/jbase.parent/pom.xml
@@ -314,6 +314,7 @@
 					</executions>
 					<configuration>
 						<outputDirectory>xtend-gen</outputDirectory>
+						<xtendAsPrimaryDebugSource>true</xtendAsPrimaryDebugSource>
 					</configuration>
 				</plugin>
 
