--- a/jbase.ide/pom.xml
+++ b/jbase.ide/pom.xml
@@ -14,4 +14,12 @@
 	<artifactId>jbase.ide</artifactId>
 	<packaging>eclipse-plugin</packaging>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.xtend</groupId>
+				<artifactId>xtend-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
