--- a/domainmodel/org.eclipse.xtext.example.domainmodel/pom.xml
+++ b/domainmodel/org.eclipse.xtext.example.domainmodel/pom.xml
@@ -46,7 +46,7 @@
 					<arguments>
 						<argument>/${project.basedir}/src/org/eclipse/xtext/example/domainmodel/GenerateDomainmodelLanguage.mwe2</argument>
 						<argument>-p</argument>
-						<argument>rootPath=/${project.basedir}/..</argument>
+						<argument>runtimeProject=/${project.basedir}</argument>
 					</arguments>
 					<classpathScope>compile</classpathScope>
 					<includePluginDependencies>true</includePluginDependencies>
