79: build jbase.feature
Task-Url: https://github.com/LorenzoBettini/jbase/issues/79

--- a/jbase.releng/pom.xml
+++ b/jbase.releng/pom.xml
@@ -42,6 +42,7 @@
 		<module>../jbase.ui.examples</module>
 		<module>../jbase.doc</module>
 		<module>../jbase.lib.feature</module>
+		<module>../jbase.ui.feature</module>
 		<module>../jbase.sdk</module>
 		<module>../jbase.site</module>
 	</modules>
