--- a/jbase.tests/pom.xml
+++ b/jbase.tests/pom.xml
@@ -5,9 +5,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<relativePath>../jbase.parent/pom.xml</relativePath>
+		<relativePath>../jbase.tests.parent/pom.xml</relativePath>
 		<groupId>net.sf.xtext-jbase</groupId>
-		<artifactId>jbase.parent</artifactId>
+		<artifactId>jbase.tests.parent</artifactId>
 		<version>0.7.0-SNAPSHOT</version>
 	</parent>
 
@@ -28,11 +28,6 @@
 			</plugin>
 
 			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-			</plugin>
-
-			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-surefire-plugin</artifactId>
 				<version>${tycho-version}</version>
@@ -45,9 +40,6 @@
 							<skip>${swtbot.tests.only}</skip>
 							<useUIHarness>false</useUIHarness>
 							<useUIThread>false</useUIThread>
-							<!-- tycho.testArgLine repeated to re-use the configuration for argLine 
-								for jacoco agent -->
-							<argLine>${tycho.testArgLine} ${memoryArgs}</argLine>
 							<includes>
 								<include>**/jbase/tests/*Test.java</include>
 							</includes>
@@ -64,9 +56,6 @@
 							<skip>${smoke.tests.skip}</skip>
 							<useUIHarness>false</useUIHarness>
 							<useUIThread>false</useUIThread>
-							<!-- tycho.testArgLine repeated to re-use the configuration for argLine 
-								for jacoco agent -->
-							<argLine>${tycho.testArgLine} ${memoryArgs}</argLine>
 							<includes>
 								<include>**/jbase/smoke/tests/*Test.java</include>
 							</includes>
