explicit jacoco report configuration for coveralls

--- a/jbase.parent/pom.xml
+++ b/jbase.parent/pom.xml
@@ -331,6 +331,12 @@
 					<groupId>org.eluder.coveralls</groupId>
 					<artifactId>coveralls-maven-plugin</artifactId>
 					<version>4.3.0</version>
+					<configuration>
+                				<jacocoReports>
+                  					<!-- by default Jacoco generates its report here -->
+                  					<jacocoReport>${project.basedir}/../jbase.tests.reports/target/site/jacoco-aggregate/jacoco.xml</jacocoReport>
+						</jacocoReports>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
