exclude jbase/ide from Sonarqube analysis

--- a/jbase.parent/pom.xml
+++ b/jbase.parent/pom.xml
@@ -91,6 +91,7 @@
       **/*TypeSystemGen*.java,
       **/*StandaloneSetup*.java,
       **/jbase/lib/**,
+      **/jbase/ide/**,
       **/jbase/internal/**,
       **/jbase/serializer/**,
       **/*LabelProvider.*,
