enable sonar in tests

--- a/jbase.tests.parent/pom.xml
+++ b/jbase.tests.parent/pom.xml
@@ -17,6 +17,9 @@
   <properties>
     <jacoco-version>0.7.9</jacoco-version>
     <additionalTestArgLine></additionalTestArgLine>
+    <!-- To enable JUnit test collection, sonarqube analysis must
+      be enabled. -->
+    <sonar.skip>false</sonar.skip>
   </properties>
 
   <profiles>
