89: updated travis file
Task-Url: https://github.com/LorenzoBettini/jbase/issues/89

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,12 @@ matrix:
     # always build this environment
     - os: linux
       jdk: oraclejdk8
-      env: DISPLAY=:99.0 ECLIPSE_TARGET=oxygen ADDITIONAL="-Pjacoco-report coveralls:report sonar:sonar"
+      env: DISPLAY=:99.0 ECLIPSE_TARGET=2018-09 ADDITIONAL="-Pjacoco-report coveralls:report sonar:sonar"
     # only on PR
-    - os: linux
-      jdk: oraclejdk8
-      env: DISPLAY=:99.0 ECLIPSE_TARGET=neon ADDITIONAL=""
-      if: type IN (pull_request)
+    #- os: linux
+    #  jdk: oraclejdk8
+    #  env: DISPLAY=:99.0 ECLIPSE_TARGET=neon ADDITIONAL=""
+    #  if: type IN (pull_request)
     - os: osx
       # default: osx_image: xcode8
       if: type IN (pull_request)
