89: updated jacoco exclusions
Task-Url: https://github.com/LorenzoBettini/jbase/issues/89

--- a/jbase.tests.parent/pom.xml
+++ b/jbase.tests.parent/pom.xml
@@ -66,6 +66,8 @@
                 <exclude>**/*TreeProvider*</exclude>
                 <exclude>**/*RuntimeModule*</exclude>
                 <exclude>**/*StandaloneSetup*</exclude>
+                <exclude>**/*XbasePatchedFormatter*</exclude>
+                <exclude>**/ui/editor/*</exclude>
               </excludes>
             </configuration>
           </plugin>
