89: after failure in travis
Task-Url: https://github.com/LorenzoBettini/jbase/issues/89

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,3 +52,5 @@ script:
 after_success:
  - ls -lR jbase.site/target/repository/
 
+after_failure:
+ - find ./jbase/jbase.tests/target/ -name "*.log" -exec cat {} \;
