--- a/domainmodel/org.eclipse.xtext.example.domainmodel.tests/pom.xml
+++ b/domainmodel/org.eclipse.xtext.example.domainmodel.tests/pom.xml
@@ -48,7 +48,7 @@
 							<useUIHarness>true</useUIHarness>
 							<useUIThread>true</useUIThread>
 							<!-- tycho.testArgLine repeated to re-use the configuration for argLine for jacoco agent -->
-							<argLine>${memoryArgs} ${os-jvm-flags} -DbuildingWithTycho=true</argLine>
+							<argLine>${moduleProperties} ${memoryArgs} ${os-jvm-flags} -DbuildingWithTycho=true</argLine>
 							<includes>
 								<include>**/tests/*Test*.java</include>
 							</includes>
