--- a/jbase.example.purejbase.tests/pom.xml
+++ b/jbase.example.purejbase.tests/pom.xml
@@ -42,7 +42,7 @@
 							<useUIThread>false</useUIThread>
 							<!-- tycho.testArgLine repeated to re-use the configuration for argLine 
 								for jacoco agent -->
-							<argLine>${memoryArgs}</argLine>
+							<argLine>${memoryArgs} ${moduleProperties}</argLine>
 							<includes>
 								<include>**/purejbase/tests/*Test.java</include>
 							</includes>
