Revert "89: tycho surefire argLine only in parent pom"
This reverts commit 90261d49cc9ffd288ab9b8bae80f59d9ebddc0b3.

--- a/jbase.tests.parent/pom.xml
+++ b/jbase.tests.parent/pom.xml
@@ -16,6 +16,7 @@
 
   <properties>
     <jacoco-version>0.7.9</jacoco-version>
+    <additionalTestArgLine>${moduleProperties}</additionalTestArgLine>
     <!-- To enable JUnit test collection, sonarqube analysis must
       be enabled. -->
     <sonar.skip>false</sonar.skip>
@@ -27,6 +28,9 @@
       <activation>
         <activeByDefault>false</activeByDefault>
       </activation>
+      <properties>
+        <additionalTestArgLine>${tycho.testArgLine} ${moduleProperties}</additionalTestArgLine>
+      </properties>
       <build>
         <plugins>
           <plugin>
