--- a/jbase.parent/pom.xml
+++ b/jbase.parent/pom.xml
@@ -52,7 +52,8 @@
     <findbugs-version>2.5.5</findbugs-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <os-jvm-flags />
-    <memoryArgs>-Xms256M -Xmx1024M -XX:+HeapDumpOnOutOfMemoryError</memoryArgs>
+    <memoryArgs>-Xms256M -Xmx1024M -XX:PermSize=256M
+      -XX:MaxPermSize=256M -XX:+HeapDumpOnOutOfMemoryError</memoryArgs>
     <xtext.version>2.15.0</xtext.version>
     <xtext-version>${xtext.version}</xtext-version>
     <xtextVersion>${xtext.version}</xtextVersion>
@@ -64,7 +65,6 @@
     <moduleProperties></moduleProperties>
 
     <tycho.testArgLine></tycho.testArgLine>
-    <platformSystemProperties></platformSystemProperties>
 
     <eclipse-target>2018-09</eclipse-target>
     <target-file-name>${eclipse-target}-xtext-2.15</target-file-name>
@@ -331,18 +331,6 @@
       </build>
     </profile>
     <profile>
-      <id>macos</id>
-      <activation>
-        <os>
-          <family>mac</family>
-        </os>
-      </activation>
-      <properties>
-        <!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->
-        <platformSystemProperties>-XstartOnFirstThread</platformSystemProperties>
-      </properties>
-    </profile>
-    <profile>
       <id>jdk9-or-newer</id>
       <activation>
         <jdk>[9,)</jdk>
@@ -403,9 +391,7 @@
           <version>${tycho-version}</version>
           <configuration>
             <!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->
-            <!-- tycho.testArgLine repeated to re-use the configuration for argLine 
-                for jacoco agent -->
-            <argLine>${tycho.testArgLine} ${moduleProperties} ${platformSystemProperties} ${memoryArgs} -DbuildingWithTycho=true</argLine>
+            <argLine>${tycho.testArgLine} ${moduleProperties}</argLine>
             <failIfNoTests>false</failIfNoTests>
             <useUIHarness>false</useUIHarness>
           </configuration>
