89: tycho.testArgLine explicit where used
Task-Url: https://github.com/LorenzoBettini/jbase/issues/89

--- a/jbase.tests/pom.xml
+++ b/jbase.tests/pom.xml
@@ -40,6 +40,7 @@
 							<skip>${swtbot.tests.only}</skip>
 							<useUIHarness>false</useUIHarness>
 							<useUIThread>false</useUIThread>
+							<argLine>${tycho.testArgLine} ${moduleProperties}</argLine>
 							<includes>
 								<include>**/jbase/tests/*Test.java</include>
 							</includes>
