--- a/jbase.parent/pom.xml
+++ b/jbase.parent/pom.xml
@@ -389,7 +389,7 @@
           <version>${tycho-version}</version>
           <configuration>
             <!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->
-            <argLine>${tycho.testArgLine} ${moduleProperties}</argLine>
+            <argLine>${moduleProperties}</argLine>
             <failIfNoTests>false</failIfNoTests>
             <useUIHarness>false</useUIHarness>
           </configuration>
