93: Disable mirrors on Windows and macOS
Task-Url: https://github.com/LorenzoBettini/jbase/issues/93

--- a/.github/workflows/windows-mac.yml
+++ b/.github/workflows/windows-mac.yml
@@ -30,4 +30,4 @@ jobs:
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml', '**/*.yml', '**/*.target') }}
         restore-keys: ${{ runner.os }}-m2-
     - name: Build with Maven
-      run: mvn -f jbase.releng/pom.xml clean verify
+      run: mvn -f jbase.releng/pom.xml clean verify -Dtycho.disableP2Mirrors=true
